# onitama

./: .gitignore  Cargo.toml  README.md  saved_game_format.md
src/: ai.rs  arena.rs  board.rs  cards.rs  filled_color.wgsl  game.rs  graphics.rs  gui.rs  lib.rs  main.rs
src/ai/: min_max_v0.rs  min_max_v1.rs  min_max_v2.rs  min_max_v3.rs
src/graphics/: board.rs  card.rs  filled_color.wgsl  mod.rs  piece.rs  renderer.rs  textured.wgsl
tests/: save_load.rs  state_hash.rs
