[package]
name = "onitama"
version = "0.9.0"
edition = "2021"
default-run = "game"

[dependencies]
egui = "0.30.0"
egui-wgpu = "0.30.0"
env_logger = "0.11.6"
log = "0.4.22"
rodio = "0.20.1"
sdl2 = { version = "0.37.0", features = ["image", "mixer"] }
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
wgpu = "23.0.1"
winit = "0.30.7"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "arena"
path = "src/arena.rs"
