[package]
name = "onitama"
version = "0.10.0"
edition = "2024"
default-run = "game"

[dependencies]
bytemuck = "1.23.2"
egui = "0.32.0"
egui-wgpu = "0.32.0"
egui-winit = "0.32.1"
env_logger = "0.11.6"
glam = { version = "0.30.5", features = ["bytemuck"] }
image = "0.25.5"
log = "0.4.22"
pollster = "0.4.0"
rodio = "0.21.1"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
wgpu = "25.0.2"
winit = "0.30.7"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "arena"
path = "src/arena.rs"
